# datavizqa

./: .gitignore  README.md  pyproject.toml
datavizqa/: main.py  tools.py
