[tool.poetry]
name = "datavizqa"
version = "0.1.0"
description = ""
authors = ["xleven <xleven@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["openai"], version = "^0.0.250"}
streamlit = "^1.25.0"
pandas = "^2.0.3"
tabulate = "^0.9.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
